[package]
name = "minifb-ui"
description = "Light wrapper around minifb to make creation of windows and UI elements simple"
license = "MIT"
keywords = ["gamedev", "ui", "window", "graphics"]
categories = ["game-development", "gui"]
version = "0.1.18"
edition = "2024"
readme = "README.md"
documentation = "https://docs.rs/minifb-ui"
repository = "https://github.com/LordAfterEight/minifb-ui"

[dependencies]
fontdue = "0.9.3"
minifb = "0.28.0"
